// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Background1 should match snapshot 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    Array [
      Object {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "position": "absolute",
        },
      ]
    }
  >
    <RNSVGSvgView
      bbHeight={1334}
      bbWidth={750}
      focusable={false}
      height={1334}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "flex": 0,
            "height": 1334,
            "width": 750,
          },
        ]
      }
      width={750}
    >
      <RNSVGGroup>
        <RNSVGPath
          d="M0 200 L0 300 L750 200 L750 100 L0 200 Z"
          fill={4289527808}
          propList={
            Array [
              "fill",
            ]
          }
        />
        <RNSVGPath
          d="M0 350 L0 370 L750 270 L750 250 L0 350 Z"
          fill={4289527808}
          propList={
            Array [
              "fill",
            ]
          }
        />
        <RNSVGPath
          d="M0 1084 L0 1104 L750 1004 L750 984 L0 1084 Z"
          fill={4278199178}
          propList={
            Array [
              "fill",
            ]
          }
        />
        <RNSVGPath
          d="M0 1154 L0 1254 L750 1154 L750 1054 L0 1154 Z"
          fill={4278199178}
          propList={
            Array [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</RNCSafeAreaProvider>
`;

exports[`Background2 should match snapshot 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    Array [
      Object {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "position": "absolute",
        },
      ]
    }
  >
    <RNSVGSvgView
      bbHeight={1334}
      bbWidth={750}
      focusable={false}
      height={1334}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "flex": 0,
            "height": 1334,
            "width": 750,
          },
        ]
      }
      width={750}
    >
      <RNSVGGroup>
        <RNSVGPath
          d="M0 0 L0 667 L375 0 L0 0 Z"
          fill={4289527808}
          propList={
            Array [
              "fill",
            ]
          }
        />
        <RNSVGPath
          d="M750 1334 L375 1334 L750 667 L750 1334 Z"
          fill={4278199178}
          propList={
            Array [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</RNCSafeAreaProvider>
`;
